--- a/about/index.html
+++ b/about/index.html
@@ -44,9 +44,9 @@
                     <img src="../assets/img/IMG_20210217_173633899-min.jpg" alt="">
                 </div>
                 <div class="more-about-text">
-                    <p>Frontend Web Developer based in Nigeria focused on designing engaging UI, building interactive experiences & bringing products to life through design and technology.</p> <br>
+                    <p>Frontend Web Developer based in Nairobi, Kenya focused on designing engaging UI, building interactive experiences & bringing products to life through design and technology.</p> <br>
                        <p> I have always supported the idea of a minimalistic and user-focused approach to design and development, which I imbibe when designing and building fully responsive web applications.</p> <br><br>
-                        <p>In my spare time, I love to listen to and play neo-jazz instrumentals on the guitar, do pushups(sometimes), go on long walks and take nature pictures</p>
+                        <p>In my spare time, I love to fiddle with blender landscapes, do pushups(jk), competitive gaming and collecting retro digital fiction and comics</p>
                     
                     <h3>Skills</h3>
                     <div class="skills">
