--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/kse0maf.css" />
 
     <!-- Primary Meta Tags -->
-    <title>Israel Mitolu | Front-End Web Developer and UI Designer</title>
+    <title>Isaac Wambiri | Front-End Web Developer, UI Designer & Mobile Enthusiast</title>
     <meta
       name="title"
       content="Israel Mitolu | Front-End Web Developer and UI Designer"
@@ -64,7 +64,7 @@
     <div class="intro">
       <div class="intro-text">
         <h2 class="hide">
-          <span class="text">Creating innovations</span>
+          <span class="text">Enriching Experiences</span>
         </h2>
         <h2 class="hide">
           <span class="text">For Everyday</span>
@@ -147,7 +147,7 @@
         </div>
 
         <div class="landing-text">
-          <h1>Israel Mitolu</h1>
+          <h1>Isaac Wambiri</h1>
           <h5>I create beautiful websites your users will love</h5>
         </div>
       </header>
@@ -167,22 +167,22 @@
                 <h2>About Me</h2>
               </div>
               <p
-                >Hi, I'm Israel Oyetunji, mostly known as Israel Mitolu ^_^, a
-                passionate Front-End web developer and Technical Writer. I love
+                >Hi, I'm Isaac Wambiri ^_^. I am a
+                passionate Front-End web developer as well as an avid contributor to open source projects for both mobile and web. I love
                 to build responsive user-friendly websites that look visually
                 appealing, with nice and fluid interactions, close attention to
                 User Experience, and are accessible to the visually impaired
                 (Web Accessibility Advocate). <br />
                 <br />
-                I write on my
-                <a href="https://israelmitolu.hashnode.dev" target="_blank"
-                  >blog</a
+                I am passionate on my
+                <a href="" target="_blank"
+                  >github</a
                 >
                 and
                 <a
-                  href="https://www.freecodecamp.org/news/author/israelmitolu/"
+                  href=""
                   target="_blank"
-                  >Freecodecamp</a
+                  >Gitlab</a
                 >
                 about topics revolving Frontend technologies to help other
                 developers understand and be creative with them :) <br /><br />
@@ -230,11 +230,9 @@
               </div>
               <div class="service-item">
                 <ion-icon name="color-palette-outline"></ion-icon>
-                <h5>Graphic Design</h5>
+                <h5>Mobile Development</h5>
                 <p
-                  >I create captivating and high quality graphics and logo
-                  designs where user readability, coupled with best design
-                  practices are prioritized</p
+                  >I create captivating and high quality full stack mobile applications with a focus on accessibility and ease of use.</p
                 >
               </div>
             </div>
