--- a/about/index.html
+++ b/about/index.html
@@ -37,7 +37,7 @@
     <section class="more-about">
         <div class="container">
             <div class="section-title">
-                <h2>Israel <span>Oyetunji </span>.</h2>
+                <h2>Isaac <span>Wambiri </span>.</h2>
             </div>
             <div class="more-about-content">
                 <div class="more-about-img">
