--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="profile-img">
               <img
                 src="./assets/img/IMG_20210217_173633899-min.jpg"
-                alt="Israel Oyetunji Mitolu"
+                alt="Isaac Wambiri"
               />
             </div>
             <div class="about-content">
@@ -247,14 +247,14 @@
             <div class="project-box">
               <div class="project-box__link">
                 <a
-                  href="https://github.com/israelmitolu/Learn-Context-by-Building-a-Shopping-Website"
+                  href="https://github.com/introvertisaac/health-fusion"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
                   <ion-icon name="logo-github"></ion-icon>
                 </a>
                 <a
-                  href="https://shop-context.netlify.app/"
+                  href="https://github.com/introvertisaac/health-fusion"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -262,7 +262,9 @@
                 </a>
               </div>
               <div class="project-box__content">
-                <h3> Minimal Ecommerce shop </h3>
+                <h3> Health Fusion </h3>
+                <h6>A mobile app built to help manage life. 
+                  Allows users to manage all of their medications, with an enjoyable calendar view is available for all users so they can view their medication historyfrom the past or look to the future and see what they need to take. Finally, users are also given a map view so that they have no problem finding any nearby pharmacies or hostiptals if needed.</h6>
                 <h5>React.js &nbsp; Styled components &nbsp; Context API </h5>
               </div>
             </div>
@@ -270,14 +272,14 @@
             <div class="project-box">
               <div class="project-box__link">
                 <a
-                  href="https://github.com/israelmitolu/The-Weirdos-NFT"
+                  href="https://github.com/introvertisaac/thirdweb-hackathon-ui/tree/main"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
                   <ion-icon name="logo-github"></ion-icon>
                 </a>
                 <a
-                  href="https://weirdos-nft.netlify.app/"
+                  href="https://audible-amber.vercel.app/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -285,7 +287,7 @@
                 </a>
               </div>
               <div class="project-box__content">
-                <h3> Weirdos NFT </h3>
+                <h3> AudioBooks </h3>
                 <h5>React.js &nbsp; Styled components &nbsp; GSAP</h5>
               </div>
             </div>
@@ -293,14 +295,14 @@
             <div class="project-box">
               <div class="project-box__link">
                 <a
-                  href="https://github.com/israelmitolu/react-music-player"
+                  href="https://github.com/introvertisaac/Rbu-Tech-V2/tree/master"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
                   <ion-icon name="logo-github"></ion-icon>
                 </a>
                 <a
-                  href="https://lofi-playlist.netlify.app"
+                  href="https://rbu-tech-v2.vercel.app/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -308,21 +310,22 @@
                 </a>
               </div>
               <div class="project-box__content">
-                <h3> Lofi Music App </h3>
+                <h3> Ruby Tech Solutions </h3>
+                <h4>A website for a mockup company</h4>
                 <h5>HTML &nbsp; SCSS</h5>
               </div>
             </div>
             <div class="project-box">
               <div class="project-box__link">
                 <a
-                  href="https://github.com/israelmitolu/fisayo-fosudo"
+                  href="https://github.com/introvertisaac/project_hikore/tree/main"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
                   <ion-icon name="logo-github"></ion-icon>
                 </a>
                 <a
-                  href="https://fisayofosudo.netlify.app"
+                  href="https://project-hikore.vercel.app/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -330,21 +333,22 @@
                 </a>
               </div>
               <div class="project-box__content">
-                <h3> Fisayo Fosudo </h3>
+                <h3> Project Hikore </h3>
+                <h5>A project developed for teh Web-3 company, HIKORE</h5>
                 <h5>HTML/SCSS &nbsp; JS &nbsp; GSAP</h5>
               </div>
             </div>
             <div class="project-box">
               <div class="project-box__link">
                 <a
-                  href="https://github.com/israelmitolu/premier-portfolio"
+                  href="https://landing-manage.netlify.app/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
                   <ion-icon name="logo-github"></ion-icon>
                 </a>
                 <a
-                  href="https://israelmitolu.netlify.app"
+                  href="https://landing-manage.netlify.app/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -352,22 +356,22 @@
                 </a>
               </div>
               <div class="project-box__content">
-                <h3> israelmitolu </h3>
+                <h3> Manage - Iterative, collaborative landing page</h3>
                 <h5>HTML/SCSS &nbsp; JS &nbsp; GSAP</h5>
               </div>
             </div>
 
-            <div class="project-box">
+            <!-- <div class="project-box">
               <div class="project-box__link">
                 <a
-                  href="https://github.com/israelmitolu/tastyfoods"
+                  href=""
                   target="_blank"
                   rel="noopener noreferrer"
                 >
                   <ion-icon name="logo-github"></ion-icon>
                 </a>
                 <a
-                  href="https://tastyfoodsco.netlify.app"
+                  href="https://landing-manage.netlify.app/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -378,7 +382,7 @@
                 <h3> Tasty Foods </h3>
                 <h5>HTML &nbsp; CSS &nbsp; JS</h5>
               </div>
-            </div>
+            </div> -->
           </div>
         </section>
 
@@ -439,30 +443,30 @@
             <div class="footer-links">
               <p
                 ><a
-                  data-text="wa.me/israelmitolu"
+                  data-text="wa.me/isaacwambiri254"
                   href="https://wa.me/+2348148751013"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >wa.me/israelmitolu</a
+                  >wa.me/isaacwambiri</a
                 ></p
               >
               <p
                 ><a
-                  data-text="israelmitolu@gmail.com"
-                  href="mailto:israelmitolu@gmail.com"
-                  >israelmitolu@gmail.com</a
+                  data-text="isaacwambiri254@gmail.com"
+                  href="mailto:isaacwambiri254@gmail.com"
+                  >isaacwambiri254@gmail.com</a
                 ></p
               >
             </div>
             <div class="footer-links">
-              <p><a href="https://twitter.com/israelmitolu">TW</a></p>
-              <p><a href="https://github.com/israelmitolu">GH</a></p>
+              
+              <p><a href="https://github.com/introvertisaac">GH</a></p>
               <p><a href="https://linkedin.com/in/israeloyetunji">LN</a></p>
               <p><a href="https://codepen.io/israelmitolu">CP</a></p>
             </div>
           </div>
         </div>
-        <div class="footer-copy"> &copy; Israel Mitolu 2022</div>
+        <div class="footer-copy"> &copy; Isaac Wambiri 2020</div>
       </footer>
     </div>
     <script
