--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <div class="container">
             <div class="profile-img">
               <img
-                src="./assets/img/IMG_20210217_173633899-min.jpg"
+                src="./assets/img/wambiri.jpg"
                 alt="Isaac Wambiri"
               />
             </div>
