--- a/about/index.html
+++ b/about/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="more-about-content">
                 <div class="more-about-img">
-                    <img src="../assets/img/IMG_20210217_173633899-min.jpg" alt="isaac wambiri">
+                    <img src="../assets/img/wambiri.jpg" alt="isaac wambiri">
                 </div>
                 <div class="more-about-text">
                     <p>Frontend Web Developer based in Nairobi, Kenya focused on designing engaging UI, building interactive experiences & bringing products to life through design and technology.</p> <br>
