--- a/index.html
+++ b/index.html
@@ -461,8 +461,8 @@
             <div class="footer-links">
               
               <p><a href="https://github.com/introvertisaac">GH</a></p>
-              <p><a href="https://linkedin.com/in/israeloyetunji">LN</a></p>
-              <p><a href="https://codepen.io/israelmitolu">CP</a></p>
+              <p><a href="https://www.linkedin.com/in/isaac-wambiri-8277a3237/">LN</a></p>
+              <p><a href="https://www.linkedin.com/in/isaac-wambiri-8277a3237/">CP</a></p>
             </div>
           </div>
         </div>
