updated github links

--- a/index.html
+++ b/index.html
@@ -361,17 +361,17 @@
               </div>
             </div>
 
-            <!-- <div class="project-box">
+            <div class="project-box">
               <div class="project-box__link">
                 <a
-                  href=""
+                  href="https://github.com/introvertisaac/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
                   <ion-icon name="logo-github"></ion-icon>
                 </a>
                 <a
-                  href="https://landing-manage.netlify.app/"
+                  href="https://github.com/introvertisaac/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -379,10 +379,10 @@
                 </a>
               </div>
               <div class="project-box__content">
-                <h3> Tasty Foods </h3>
-                <h5>HTML &nbsp; CSS &nbsp; JS</h5>
+                <h3> Other projects on my Github </h3>
+                
               </div>
-            </div> -->
+            </div>
           </div>
         </section>
 
