--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <title>Isaac Wambiri | Front-End Web Developer, UI Designer & Mobile Enthusiast</title>
     <meta
       name="title"
-      content="Israel Mitolu | Front-End Web Developer and UI Designer"
+      content="Isaac Wambiri | Front-End Web Developer and UI Designer"
     />
     <meta
       name="Keywords"
-      content="Israel Mitolu, Portfolio, Front-End Developer, Developer, UI Engineer, UI Designer, Nigeria"
+      content="Isaac Wambiri"
     />
     <meta
       name="description"
@@ -28,7 +28,7 @@
     <meta property="og:url" content="https://israelmitolu.netlify.app/" />
     <meta
       property="og:title"
-      content="Israel Mitolu | Front-End Web Developer and UI Designer"
+      content="Isaac Wambiri | Front-End Web Developer and UI Designer"
     />
     <meta
       property="og:description"
@@ -41,7 +41,7 @@
     <meta property="twitter:url" content="https://israelmitolu.netlify.app/" />
     <meta
       property="twitter:title"
-      content="Israel Mitolu | Front-End Web Developer and UI Designer"
+      content="Isaac Wambiri | Front-End Web Developer and UI Designer"
     />
     <meta
       property="twitter:description"
@@ -247,14 +247,14 @@
             <div class="project-box">
               <div class="project-box__link">
                 <a
-                  href="https://github.com/introvertisaac/health-fusion"
+                  href="https://github.com/introvertisaac/Car-hub"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
                   <ion-icon name="logo-github"></ion-icon>
                 </a>
                 <a
-                  href="https://github.com/introvertisaac/health-fusion"
+                  href="https://car-hub-theta-orpin.vercel.app/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -262,20 +262,19 @@
                 </a>
               </div>
               <div class="project-box__content">
-                <h3> Health Fusion </h3>
-                <h6>A mobile app built to help manage life. 
-                  Allows users to manage all of their medications, with an enjoyable calendar view is available for all users so they can view their medication historyfrom the past or look to the future and see what they need to take. Finally, users are also given a map view so that they have no problem finding any nearby pharmacies or hostiptals if needed.</h6>
-                <h5>React.js &nbsp; Styled components &nbsp; Context API </h5>
+                <h3> Car Hub</h3>
+                <h6>A fullstack Next13 application for a company in the motorvehicle sector. Built with responsive design and rapid development in mind.</h6>
+                <h5>NextJs, Typescript, TailwindCSS &nbsp; Rapid API's,  &nbsp; Context API </h5>
               </div>
             </div>
 
             <div class="project-box">
               <div class="project-box__link">
-                <a
+                <!-- <a
                   href="https://github.com/introvertisaac/thirdweb-hackathon-ui/tree/main"
                   target="_blank"
                   rel="noopener noreferrer"
-                >
+                > -->
                   <ion-icon name="logo-github"></ion-icon>
                 </a>
                 <a
@@ -288,17 +287,18 @@
               </div>
               <div class="project-box__content">
                 <h3> AudioBooks </h3>
+                <p>A collaborative venture using frontend technologies together with emerging cryptowallet systems and wallets</p>
                 <h5>React.js &nbsp; Styled components &nbsp; GSAP</h5>
               </div>
             </div>
 
             <div class="project-box">
               <div class="project-box__link">
-                <a
+                <!-- <a
                   href="https://github.com/introvertisaac/Rbu-Tech-V2/tree/master"
                   target="_blank"
                   rel="noopener noreferrer"
-                >
+                > -->
                   <ion-icon name="logo-github"></ion-icon>
                 </a>
                 <a
@@ -340,12 +340,12 @@
             </div>
             <div class="project-box">
               <div class="project-box__link">
-                <a
+                <!-- <a
                   href="https://landing-manage.netlify.app/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
-                  <ion-icon name="logo-github"></ion-icon>
+                  <ion-icon name="logo-github"></ion-icon> -->
                 </a>
                 <a
                   href="https://landing-manage.netlify.app/"
@@ -356,7 +356,7 @@
                 </a>
               </div>
               <div class="project-box__content">
-                <h3> Manage - Iterative, collaborative landing page</h3>
+                <h3> A landing page for a SASS Startup</h3>
                 <h5>HTML/SCSS &nbsp; JS &nbsp; GSAP</h5>
               </div>
             </div>
