--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://isaacwambiri.netlify.app//">
-    <meta property="twitter:title" content="Israel Mitolu | Front-End Web Developer and Designer">
+    <meta property="twitter:title" content="Isaac Wambiri | Front-End Web Developer and Designer">
     <meta property="twitter:description" content="Front end Developer and Engineer with a keen eye for aesthetics, focused on designing and building responsive and pixel perfect websites to give your brand the sleek online presence it deserves.">
     <meta property="twitter:image" content="/assets/img/seo-img.png">
     <link rel="stylesheet" href="https://use.typekit.net/kse0maf.css">
