--- a/about/index.html
+++ b/about/index.html
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                     <div class="about-cta">
-                        <a href="https://docs.google.com/document/d/1gLw0XUNzuPU4TjuS1jhJsycVUZyZ-uxE3f_qL_pZ4-o/edit?usp=sharing" class="skills-cta">My resume</a>
+                        <a href="/Isaac Wambiri Resume (1).pdf" class="skills-cta">My resume</a>
                         <span>—</span>
                         <a href="../index.html#contact" class="exp-cta">Contact me</a>
                     </div>
